--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aws-todoapp",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.1",
+    "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
     "swr": "^2.2.4"
@@ -18,11 +18,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "14.0.1",
+    "eslint-config-next": "13.5.6",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3",
     "typescript": "^5"
   }
 }
